Finálny commit pre zadanie

--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -8,7 +8,9 @@
 	
 	{*JQUERY*}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script src="nette-ajax.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+		<script src="https://cdn.jsdelivr.net/npm/nette.ajax.js@2.3.0/nette.ajax.min.js"></script>
+
 	{*END JQUERY*}
 
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
