--- a/www/style.css
+++ b/www/style.css
@@ -1,17 +1,9 @@
-
-tr th {
-    background: #b5984a;
-    color: #fff;
-    border: none;
-}
-
 a {
     color: #006aeb;
     text-decoration: none;
     background-color: transparent;
 }
 
-td {
-    border-color: #e1d8c1 !important;
-    background: #fff8e5;
+.price {
+    color: black;
 }
